Adding factories for all models and fixing world edit saving
